--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td> <img src="image/Boss.png" arc="Sorawid Mingmolee"></td>
+                <td> <img src="Boss.png" arc="Sorawid Mingmolee"></td>
                 <td><h1> Sorawid Mingmolee</h1>
                     <p><em>Founder and Chef of <strong><a href="https://www.youtube.com/watch?v=Ibi9pVghgTc">Nothern food</a></strong></em></p>
                     <br>
